--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .option {
-    background-color: #fff;
+    background-color: #b3cfbe;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     flex-basis: calc(33.333% - 20px);
